--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<div class="col-md-12">
 						<ul>
 							<li class="active"><a href="index.html">Ana Sayfa</a></li>
-							<li><a href="services.html">Hizletler</a></li>
+							<li><a href="services.html">Hizmetler</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">Hakkimda</a></li>
 							<li><a href="contact.html">Iletisim</a></li>
