--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Seval AYDIN</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -67,7 +67,7 @@
 					<div class="col-md-12">
 						<ul>
 							<li><a href="index.html">Ana Sayfa</a></li>
-							<li><a href="services.html">Servisler</a></li>
+							<li><a href="services.html">Hizmetler</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">Hakkimda</a></li>
 							<li class="active"><a href="contact.html">Iletisim</a></li>
