--- a/blog2.html
+++ b/blog2.html
@@ -74,7 +74,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="row">
+				<!--<div class="row">
 					<div class="col-md-12">
 						<h2 class="head-title">Enstrüman</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
@@ -88,7 +88,7 @@
 						</a>
 						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
 							<span><i class="icon-search3"></i></span>
-						</a>
+						</a> -->
 					</div>
 				</div>
 			</div>
